Configurando a área principal e o rodapé do site

--- a/index.html
+++ b/index.html
@@ -44,6 +44,72 @@
                 <section id="capa">
                     <img src="imagens/museu.png">
                 </section>
+
+                <section id="postagens">
+                    <article id="video">
+                        <h3>Vídeo: conheça o museu</h3>
+                        <iframe width="310" height="170" src="https://www.youtube.com/embed/VIyiGidDQ5c" frameborder="0"
+                            allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+                            allowfullscreen></iframe>
+                    </article>
+
+                    <article id="mapa">
+                        <h3>Mapa: encontre o museu</h3>
+                        <iframe
+                            src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d15802.226302042078!2d-34.9016846!3d-8.0445666!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0x9f16deffb08c2f10!2sMuseu%20do%20Estado%20de%20Pernambuco%20-%20MEPE!5e0!3m2!1spt-BR!2sbr!4v1594001535584!5m2!1spt-BR!2sbr"
+                            width="310" height="170" frameborder="0" style="border:0;" allowfullscreen=""
+                            aria-hidden="false" tabindex="0"></iframe>
+                    </article>
+
+                    <article id="arcevo">
+                        <h3>O arcevo do museu</h3>
+                        <ul>
+                            <h4>História</h4>
+                            <li>
+                                <a href="">Arqueologia</a>
+                            </li>
+
+                            <li>
+                                <a href="">Cultura Indígena</a>
+                            </li>
+
+                            <li>
+                                <a href="">Presença Holandesa em Pernambuco</a>
+                            </li>
+
+                            <h4>Artistas</h4>
+                            <li>
+                                <a href="">Cícero Dias</a>
+                            </li>
+
+                            <li>
+                                <a href="">Francisco Brennand</a>
+                            </li>
+
+                            <li>
+                                <a href="">Burle Max</a>
+                            </li>
+
+                        </ul>
+                    </article>
+
+                    <article id="descricao">
+                        <h3>80 anos desde a fundação</h3>
+                        <p>
+                            No palacete do século XIX onde viveu o filho do Barão de Beberibe, funciona desde 1940 o
+                            Museu do Estado de Pernambuco. Atualmente o acervo do Museu do Estado possui mais de 14 mil
+                            peças, agregando importantes coleções que se distribuem nas seguintes categorias:
+                            Arqueologia, Cultura Indígena, Presença Holandesa em Pernambuco, Arte Sacra, Cultura
+                            Afro-brasileira, Ex-votos, Iconografia, Mobiliário, Porcelana, Cristais e Pintura com telas
+                            de artistas como Cícero Dias, Telles Júnior, Francisco Brennand e Burle Max. Além do
+                            Palacete, conta com o Espaço Cícero Dias e uma casa onde são realizados cursos e oficinas de
+                            arte.
+                        </p>
+                        <a href="http://www.cultura.pe.gov.br/pagina/espacosculturais/museu-do-estado-de-pernambuco-mepe/"
+                            target="_blank"><strong>Leia mais</strong></a>
+                    </article>
+
+                </section>
             </div>
 
             <aside>
@@ -97,6 +163,11 @@
                 </section>
             </aside>
 
+            <footer class="clear">
+                2020 <a
+                    href="http://www.cultura.pe.gov.br/pagina/espacosculturais/museu-do-estado-de-pernambuco-mepe/">Museu
+                    Nacional</a> - Todos os direitos reservados
+            </footer>
         </div>
 
     </div>
